<resources>
    <string name="app_name">Orgabin Admin</string>
    <string name="sign_in_title">Sign In</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="report_sender_title">Reported By</string>
    <string name="title_activity_schedule_list">ScheduleListActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="input_location_hint">Masukkan TPA</string>
    <string name="input_date_hint">Tanggal Pengangkutan</string>
    <string name="input_start_time_hint">Waktu Mulai</string>
    <string name="input_end_time_hint">Waktu Selesai</string>
    <string name="btn_form_submit_text">Masukkan</string>
    <string name="add_schedule_title">Tambah Jadwal</string>
    <string name="edit_schedule_title">Ubah Jadwal</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="nav_home_title">Beranda</string>
    <string name="nav_report_title">Laporan</string>
    <string name="nav_request_title">PKK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out_title">Log Out</string>
    <string name="empty_error">Data tidak boleh kosong</string>

</resources>